[project]
name = "pdf-site-extractor"
version = "1.0.0"
description = "A Python web crawler to discover and download PDF files from websites"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
pdf-extractor = "menu:main"
